--- a/index.html
+++ b/index.html
@@ -14,11 +14,12 @@
 </head>
 
 <body style="background: url('assets/images/bird-6955201_1920.jpg') no-repeat; background-size:cover;">
-
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.bundle.min.js"
+      
+    <!--https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.bundle.min.js-->
+    <script src="https://github.com/beedeveloperbr/whatsapp-widget/tree/main/assets/js/bootstrap.bundle.min.js"
         integrity="sha384-/bQdsTh/da6pkI1MST/rWKFNjaCP5gBSY4sEBT38Q/9RBh9AH40zEOg7Hlq2THRZ"
         crossorigin="anonymous"></script>
-
+       
     <script src="https://cdn.jsdelivr.net/gh/javimata/whatsapp-widget@1.1.3/assets/js/whatsapp.js"></script>
     <script>
         var whatsAppBtn = new WhatsAppBtn({ phone: "12345678910", phones: ["Sales:0123456789", "Support:0987654321"], text: "Hi, i wanna contact us[url]", iconColor: '#fff', backgroundColor: "#4DC247", callTo: "👋🏼 Contact us", positionText: "tl", position: "rb", style: "bottom:80px", delay: 1, delayText: 1, width: "60", ga: ['phone', 'click', 'whatsapp'], fb: ['Contact', 'Whatsapp'], pi: ['Custom', 'Whatsapp'] });
