--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         var whatsAppBtn = new WhatsAppBtn({ phone: "12345678910", phones: ["Sales:0123456789", "Support:0987654321"], text: "Hi, i wanna contact us[url]", iconColor: '#fff', backgroundColor: "#4DC247", callTo: "👋🏼 Contact us", positionText: "tl", position: "rb", style: "bottom:80px", delay: 1, delayText: 1, width: "60", ga: ['phone', 'click', 'whatsapp'], fb: ['Contact', 'Whatsapp'], pi: ['Custom', 'Whatsapp'] });
         whatsAppBtn.renderButton()
     </script>
-    <link href="https://cdn.jsdelivr.net/gh/javimata/whatsapp-widget@1.1.3/assets/css/theme-modern-whatsapp.min.css" rel="stylesheet">
+    <link href="https://github.com/beedeveloperbr/whatsapp-widget/blob/main/assets/css/theme-modern-whatsapp.min.css" rel="stylesheet">
 
 </body>
 
